update quizz
